--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+.container {
+  position: relative;
+  width: 550px;
+  margin: 0 auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header-logo {
+  padding: 22px 30px;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+
+/* --------------GALLERY-------------- */
+.gallery {
+  width: fit-content;
+  margin: 50px auto;
+  display: flex;
+  gap: 8.5px;
+}
+.gallery-column {
+  display: flex;
+  flex-direction: column;
+  gap: 8.5px;
+}
+.gallery > img {
+  border-radius: 8px;
+}
+.col-1 {
+  padding-top: 49px;
+}
+.col-2 {
+  padding-top: 7px;
+}
+.col-3 {
+  padding-top: 30px;
+}
+.col-5 {
+  padding-top: 18px;
+}
+h1 {
+  margin-top: 32px;
+  margin-bottom: 16px;
+  margin-left: 36px;
+  font-size: 36px;
+  color: #000000;
+}
+.subtitle {
+  font-size: 16px;
+  color: #222222;
+  margin-left: 36px;
+  width: 320px;
+}
+
+/* --------------CARD-------------- */
+.cards {
+  display: flex;
+  overflow: hidden;
+  overflow-x: scroll;
+  gap: 18px;
+  margin-left: 36px;
+  margin-top: 49px;
+}
+.cards::-webkit-scrollbar {
+  display: none;
+}
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 176px;
+  gap: 9px;
+  font-size: 12px;
+  margin-bottom: 50px;
+}
+.card > img {
+  width: 176px;
+  height: 235px;
+  border-radius: 9px;
+}
+.card-rating {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+}
+.card-rating > span {
+  color: #918e9b;
+}
+.round {
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background-color: #918e9b;
+}
+.promo {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background: #ffffff;
+  border-radius: 2px;
+  font-size: 10.24px;
+  line-height: 110%;
+  text-align: center;
+  color: #222222;
+  padding: 4.5px 6px;
+  text-transform: uppercase;
 }
